# custom-language-switcher

./: .gitignore  App.h  AppLinux.cpp  AppWindows.cpp  CMakeLists.txt  CustomLanguageSwitcher.rc  README.md  build.py  main.cpp
iss/: TaskConfig.xml  install.iss.example
